# virtual_bike

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  racetrack_chunk_creator.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
arduino_bike_measurement/: arduino_bike_measurement.ino
client/: Cargo.toml
client/assets/: test-bike.glb  test_asset.blend  test_asset.blend1
client/src/: main.rs
frontend_wasm/: Cargo.toml
frontend_wasm/src/: lib.rs
resources/: calibration.json  client_credentials.json  client_settings.json  server_credentials.json
resources/http/: extras.js
resources/http/docs/: resources.html  styles.css
resources/http/play/: constants.js  index.html  main.js  map.js  vehicle.js  webgl_test.js
resources/http/play_wasm/: index.html
resources/http_old/: index.html
resources/http_old/docs/: index.html
resources/http_old/play/: index.html  main.js  map.js  vehicle.js
resources/http_old/play_wasm/: map.js  vehicle.js
resources/map_generators/: test.json
resources/maps/camden/: metadata.json
resources/maps/flat/: metadata.json
resources/maps/flat/chunks/-100_-100/: data.json
resources/maps/flat/chunks/-100_-200/: data.json
resources/maps/flat/chunks/-100_-300/: data.json
resources/maps/flat/chunks/-100_0/: data.json
resources/maps/flat/chunks/-100_100/: data.json
resources/maps/flat/chunks/-200_-100/: data.json
resources/maps/flat/chunks/-200_-200/: data.json
resources/maps/flat/chunks/-200_0/: data.json
resources/maps/flat/chunks/-200_100/: data.json
resources/maps/flat/chunks/-200_200/: data.json
resources/maps/flat/chunks/-200_300/: data.json
resources/maps/flat/chunks/-300_0/: data.json
resources/maps/flat/chunks/-300_100/: data.json
resources/maps/flat/chunks/-300_200/: data.json
resources/maps/flat/chunks/-300_300/: data.json
resources/maps/flat/chunks/0_-100/: data.json
resources/maps/flat/chunks/0_-200/: data.json
resources/maps/flat/chunks/0_0/: data.json
resources/maps/flat/chunks/0_100/: data.json
resources/maps/flat/chunks/0_200/: data.json
resources/maps/flat/chunks/100_-100/: data.json
resources/maps/flat/chunks/100_-200/: data.json
resources/maps/flat/chunks/100_0/: data.json
resources/maps/flat/chunks/100_100/: data.json
resources/maps/intersection_test/: metadata.json
resources/maps/large-walls/: metadata.json
resources/maps/large-walls/chunks/0_0/: data.json
resources/maps/paths_test/: metadata.json
resources/maps/paths_test/chunks/-100_-300/: data.json
resources/maps/paths_test/chunks/-100_-400/: data.json
resources/maps/paths_test/chunks/-100_-500/: data.json
resources/maps/paths_test/chunks/-200_-300/: data.json
resources/maps/paths_test/chunks/-200_-400/: data.json
resources/maps/paths_test/chunks/-200_-500/: data.json
resources/maps/paths_test/chunks/-200_100/: data.json
resources/maps/paths_test/chunks/-300_-100/: data.json
resources/maps/paths_test/chunks/-300_-200/: data.json
resources/maps/paths_test/chunks/-300_-300/: data.json
resources/maps/paths_test/chunks/-300_-400/: data.json
resources/maps/paths_test/chunks/-300_-500/: data.json
resources/maps/paths_test/chunks/-300_100/: data.json
resources/maps/paths_test/chunks/0_-300/: data.json
resources/maps/paths_test/chunks/0_-400/: data.json
resources/maps/paths_test/chunks/0_-500/: data.json
resources/maps/paths_test/chunks/100_-200/: data.json
resources/maps/paths_test/chunks/100_-300/: data.json
resources/maps/paths_test/chunks/100_-400/: data.json
resources/maps/paths_test/chunks/100_-500/: data.json
resources/maps/racetrack/: metadata.json
resources/maps/racetrack/generic_chunk/: data.json
resources/maps/random_gen/: metadata.json
resources/maps/real_terrain/: metadata.json
resources/maps/real_terrain/chunks/-10000_-10000/: data.json
resources/maps/real_terrain/chunks/-10000_0/: data.json
resources/maps/real_terrain/chunks/-10000_10000/: data.json
resources/maps/real_terrain/chunks/0_-10000/: data.json
resources/maps/real_terrain/chunks/0_0/: data.json
resources/maps/real_terrain/chunks/0_10000/: data.json
resources/maps/real_terrain/chunks/10000_-10000/: data.json
resources/maps/real_terrain/chunks/10000_0/: data.json
resources/maps/real_terrain/chunks/10000_10000/: data.json
resources/maps/rollercoaster/: metadata.json
resources/maps/rollercoaster/generic_chunk/: data.json
resources/maps/swiss_low_res/: metadata.json
resources/maps/switzerland/: metadata.json
resources/maps/test/: metadata.json
resources/maps/voltage_gradient/: metadata.json
resources/path_types/: generic_road.json
resources/vehicles/car_1/: model.blend  model.blend1  static_data.json
resources/vehicles/cool_bike/: 41-bikered.rar  bikered.blend  model.glb  static_data.json
resources/vehicles/test-bike/: model.blend  model.blend1  model.glb  static_data.json
resources/vehicles/toilet/: static_data.json
resources/vehicles/vehicle_no_model/: model.blend  static_data.json
resources/worlds/: camden.json  demo.json  intersection_test_world.json  paths.json  real_terrain.json  switzerland.json  test-world.json  test.json  voltage_gradient.json
server/: Cargo.toml
server/src/: main.rs
src/: bin.rs  lib.rs  physics.rs  renet_server.rs  resource_interface.rs  server.rs  validity.rs  vehicle.rs  web_server.rs  world.rs
src/client/: asset_client.rs  cache.rs  cli_signin.rs  egui_signin.rs  hardware_controller.rs  mod.rs  network.rs
src/client/play/: cache.rs  chat.rs  chunk_manager.rs  gui.rs  main_egui.rs  messages.rs  mod.rs  skybox.rs  weather.rs
src/client_old/: chunk_manager.rs  gui.rs  mod.rs  network.rs
src/map/: GIS.rs  chunk.rs  map_generator.rs  mod.rs  path.rs
src/map/map_generation/: fractal.rs  gis.rs  mod.rs  textures.rs
src/server/: message_log.rs  mod.rs
src/tests/: gen.rs  mod.rs  paths.rs
(+10481 files in other folders)
