[package]
name = "virtual_bike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["backend", "debug_render_physics", "debug_vehicle_input"]#, "client_skip_signin", "debug_camera_control", "experimental_terrain_gen"]
backend = ["reqwest"]
frontend = ["serialport", "bevy", "bevy_rapier3d", "bevy-inspector-egui", "bevy-inspector-egui-rapier", "bevy_renet", "image", "eframe"]
web_server = ["backend", "hyper", "futures"]
debug_render_physics = []
debug_camera_control = []
experimental_terrain_gen = []
debug_vehicle_input = []
GIS_longitude_scaling = []
client_skip_signin = ["frontend"]

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}# https://stackoverflow.com/questions/60113832/rust-says-import-is-not-used-and-cant-find-imported-statements-at-the-same-time
serde_json = "1.0.93"
extras = {path = "../extras", features = ["extras_rand"]}
rapier3d = {version = "0.17.2", features = ["serde-serialize"]}
nalgebra = {version = "0.32.2", features = ["serde-serialize"]}
renet = "0.0.13"
bincode = "1.3.3"
approx = "0.5.1"# Approximate float comparisons
#splines = {version = "4.3.0", features = ["serde", "nalgebra"]}

# Server-only
reqwest = {version = "0.11.22", optional = true, features = ["blocking", "json"]}
#noise = {version = "0.8.2", optional = true}

# Client-only
serialport = {version = "4.2.1", optional = true}
bevy = {version = "0.11.0", features = [], optional = true}# 2023-8-19: changed from latest (0.11.0) to 0.9 which is what the latest version of bevy-inspector-egui-rapier uses
bevy_rapier3d = {version = "0.22.0", features = ["debug-render"], optional = true}
bevy-inspector-egui = {version = "0.20.0", optional = true}# was 0.19.0, changed to 0.20.0 on 2023-10-12 TODO: change to 0.21.0 because that is the latest version as of 2023-11-21 and it uses the same egui version (^0.23.0) as eframe-0.23.0
bevy-inspector-egui-rapier = {version = "0.9.0", features = ["rapier3d"], optional = true}
bevy_renet = {version = "0.0.9", optional = true}# bevy compatibility table: https://crates.io/crates/bevy_renet
image = {version = "^0.24", optional = true}
eframe = {version = "0.23.0", optional = true}

# all these are the versions used in https://www.youtube.com/watch?v=GwlZ5EPu8l0&t=102s
#bevy = {version = "0.9", features = [], optional = true}# 2023-8-19: changed from latest (0.11.0) to 0.9 which is what the latest version of bevy-inspector-egui-rapier uses
#bevy_rapier3d = {version = "0.19.0", features = ["debug-render"], optional = true}
#bevy-inspector-egui = {version = "0.14.0", optional = true}
#bevy-inspector-egui-rapier = {version = "0.8.0", features = ["rapier3d"], optional = true}
#bevy_renet = {version = "0.0.6", optional = true}# bevy version compatibility table: https://crates.io/crates/bevy_renet

# web server
hyper = {version = "0.12", optional = true}#hyper = {version = "0.14.27", features = ["server"]}# use older version so I can copy code from evolution_model
futures = {version = "0.3.28", optional = true}
