[package]
name = "virtual_bike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server", "client", "client_default_signin", "path_rendering", "debug_vehicle_input"]#, "debug_render_physics", "experimental_terrain_gen"]

server = ["rapier3d", "easy-gltf", "rouille"]

client = ["serialport", "bevy", "bevy-inspector-egui", "bevy_renet", "image", "eframe", "bevy_web_asset"]

debug_render_physics = ["rapier3d", "bevy_rapier3d", "bevy-inspector-egui-rapier"]
experimental_terrain_gen = []
debug_vehicle_input = []
client_default_signin = []
egui_signin = []
path_rendering = []

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
serde = {version = "1.0.152", features = ["derive", "rc"]}# https://stackoverflow.com/questions/60113832/rust-says-import-is-not-used-and-cant-find-imported-statements-at-the-same-time
serde_json = "1.0.93"
rapier3d = {version = "0.17.2", features = ["serde-serialize"], optional = true}# Always used by backend, frontend uses only when `debug_render_physics` is enabled
nalgebra = {version = "0.32.2", features = ["serde-serialize"]}
renet = "0.0.14"
bincode = "1.3.3"
approx = "0.5.1"# Approximate float comparisons, for tests
local-ip-address = "0.5.6"
dialoguer = "0.11.0"
rand = "0.8.5"
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
colored = "2.1.0"
bytes = "1.4.0"

# Server-only
easy-gltf = {version = "1.1.1", optional = true}
rouille = {version = "3.6.2", optional = true}

# Client-only
# 2023-12-2: Upgrading to bevy-^0.12
serialport = {version = "4.2.1", optional = true}
bevy = {version = "^0.12", optional = true}# 2023-8-19: changed from latest (0.11.0) to 0.9 which is what the latest version of bevy-inspector-egui-rapier uses
bevy-inspector-egui = {version = "0.21.0", optional = true}
bevy_renet = {version = "0.0.10", optional = true}# bevy compatibility table: https://crates.io/crates/bevy_renet
image = {version = "^0.24", optional = true}
eframe = {version = "0.23.0", optional = true}
# debug_render_physics only
bevy_rapier3d = {version = "0.23.0", features = ["debug-render"], optional = true}
bevy-inspector-egui-rapier = {version = "0.9.0", features = ["rapier3d"], optional = true}
bevy_web_asset = {version = "0.7", optional = true}